1.3.6
	+ Better validation of virtual host names
	+ Added warning when adding virtual hostames if the DNS module is
	not enabled
1.1.20
	+ New release
1.1
	+ Create /var/run/apache2 in upstart script 
0.12.100
	+ New release
0.12.99
	+ New release
0.12
	+ Add help field to webserver model
	+ Bugfix. Do not add a dns domain if the virtual host
	  is just a host name with no domain
0.11.102
	+ Use the new EBox::Model::Row
0.11.101
	+ New upstream release
0.11.99
	+ First release