@@ -1,3 +1,6 @@
+HEAD
+        + Don't allow to enable public_html directories if samba modules
+	is not configured because in this situation there aren't user home directories
 1.3.6
 	+ Better validation of virtual host names
 	+ Added warning when adding virtual hostames if the DNS module is
